added redux and fetchApi

--- a/src/index.css
+++ b/src/index.css
@@ -60,12 +60,28 @@
     url('./fonts/regular400/Manrope-Regular.ttf') format('truetype');
 }
 
-html {
-  height: 100%;
-
+::-webkit-scrollbar {
+  width: 6px;
+  position: absolute;
+  z-index: 9999;
 }
 
+::-webkit-scrollbar-thumb {
+  border-radius: 12px;
+  background: var(--bg-btn-hover);
+}
+
+html,
 body {
+  height: 100%;
+  position: relative;
+  overflow-y: scroll;
+}
+
+
+
+body {
+  width: 100%;
   margin: 0;
   font-family: Manrope, sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -77,11 +93,16 @@ code {
     sans-serif;
 }
 
+img {
+  height: 100%;
+}
+
 
 p,
 h1,
 h2,
-h3 {
+h3,
+h4 {
   margin: 0;
   padding: 0;
 }
